<resources>
    <string name="app_name">Cloud Shopee</string>
    <string name="heading">Cloud Shopee</string>
    <string name="ContinueButton">Continue</string>
    <string name="welcome">Welcome !!</string>
    <string name="ContinueLine">Click On Continue To Proceed</string>
    <string name="menu">Categories</string>
    <string name="Quantity">0</string>
    <string name="CartName">Cart</string>

    <string name="C_Item_1">Grocery</string>
    <string name="C_Item_2">Books</string>
    <string name="C_Item_3">Electronics</string>
    <string name="C_Item_4">Clothes</string>
    <string name="C_Item_5">Medicines</string>


    <string name="GroceryHeading">Let\'s Buy Some Grocery !</string>


    <string name="G_L1">Flour</string>
    <string name="G_L2">Pulses</string>
    <string name="G_L3">Brush</string>
    <string name="G_L4">Chips</string>
    <string name="G_L5">Biscuits</string>
    <string name="G_L6">Chocolate</string>
    <string name="G_L7">Sugar</string>
    <string name="G_L8">Soap</string>
    <string name="G_L9">Bread</string>
    <string name="G_L10">Maggi</string>

    <string name="G_L1_B">Add To Cart</string>
    <string name="G_L2_B">Add To Cart</string>
    <string name="G_L3_B">Add To Cart</string>
    <string name="G_L4_B">Add To Cart</string>
    <string name="G_L5_B">Add To Cart</string>
    <string name="G_L6_B">Add To Cart</string>
    <string name="G_L7_B">Add To Cart</string>
    <string name="G_L8_B">Add To Cart</string>
    <string name="G_L9_B">Add To Cart</string>
    <string name="G_L10_B">Add To Cart</string>

    <string name="G_Cart">0</string>

    <string name="BC_Item_1">Educational</string>
    <string name="BC_Item_2">Novels</string>

    <string name="g_flour">FLOUR — Rs. 47 Per Kg</string>
    <string name="g_desc_flour_image_">Flour Image</string>
    <string name="g_pulses">Pulses — Rs. 125 Per Kg</string>
    <string name="g_desc_pulses_image_">Pulses Image</string>
    <string name="g_brush">Brush — Rs. 40 Per Piece</string>
    <string name="g_desc_brush_image_">Tooth Brush Image</string>
    <string name="g_chips">Lays — Rs. 20 Per Piece</string>
    <string name="g_desc_chips_image_">Chips Image</string>
    <string name="g_desc_biscuits_image_">Biscuits Image</string>
    <string name="g_biscuits">Biscuits — Rs. 10 Per Piece</string>
    <string name="g_desc_chocolate_image_">Chocolate Image</string>
    <string name="g_chocolates">Chocolate — Rs. 50 Per Piece</string>
    <string name="g_desc_sugar_image_">Sugar Image</string>
    <string name="g_sugar">Sugar — Rs. 120 Per Kg</string>
    <string name="g_soap">Soap — Rs. 30 Per Piece</string>
    <string name="g_desc_soap_image_">Soap Image</string>
    <string name="g_desc_bread_image_">Bread Image</string>
    <string name="g_bread">Bread — Rs. 45 Per Piece</string>
    <string name="g_maggi">Maggi — Rs. 10 Per Piece</string>
    <string name="g_desc_maggi_image_">Maggi Image</string>
    <string name="Develop">App is Under Development</string>


</resources>