<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Books">



        <TextView
            android:id="@+id/Books_Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CDDC39"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="right|center_horizontal|center_vertical"
            android:padding="10dp"
            android:text="@string/Quantity"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/CartName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/CartName"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.856"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.099" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#008EFF"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/menu"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/BC_Item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E35900"
            android:minWidth="250dp"
            android:minHeight="70dp"
            android:onClick="launchEdu"
            android:text="@string/BC_Item_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435" />

        <Button
            android:id="@+id/BC_Item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E35900"
            android:minWidth="250dp"
            android:minHeight="70dp"
            android:onClick="launchNovel"
            android:text="@string/BC_Item_2"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.596" />

</androidx.constraintlayout.widget.ConstraintLayout>